--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -60,7 +60,7 @@
                 <ol class="order">
                     <li><a th:href="@{/admin/layout/order/list}" class="list">주문현황</a></li>
                     <li><a href="#">매출현황</a></li>
-                    <li><a th:href="@{/admin/layout/order/delivery}" class="delivery">배송관리</a></li>
+                    <li><a th:href="@{/admin/layout/order/delivery}" class="delivery">배송현황</a></li>
                 </ol>
             </li>
             <li>
