--- a/src/main/resources/templates/admin/layout/admin_layout.html
+++ b/src/main/resources/templates/admin/layout/admin_layout.html
@@ -74,6 +74,16 @@
       </th:block>
     </th:block>
 
+    <!--  주문관리  -->
+    <th:block th:case="'order'">
+      <th:block th:with="path='/admin/' + ${group}+'/'+${cate}, fragment=${cate}">
+        <th:replace th:with="path=${path}, fragment=${fragment}"
+                    th:replace="~{${path}::${fragment}}">
+        </th:replace>
+      </th:block>
+    </th:block>
+
+
   </th:block>
 </main>
 <!-- footer -->
