--- a/src/main/resources/templates/admin/shop/sales.html
+++ b/src/main/resources/templates/admin/shop/sales.html
@@ -1,5 +1,5 @@
 <div class="content" th:fragment="sales">
-    <link rel="stylesheet" th:href="@{/css/admin/list.css}" />
+    <link rel="stylesheet" th:href="@{/css/admin/shop/sales.css}" />
     <div class="dashboard">
         <div class="content_header">
             <h1>매출현황</h1>
@@ -52,11 +52,11 @@
             <div class="pagingBox">
                 <div class="pagingList">
                     <!-- 이전 버튼 -->
-                    <a href="#" class="prev"></a>
+                    <a href="#" class="prev"><</a>
 
                     <!-- 페이지 링크 -->
-                    <a href="#">1</a>
-                    <a href="#" class="active">2</a>
+                    <a href="#" class="active">1</a>
+                    <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
