--- a/src/main/resources/static/css/admin/shop/list.css
+++ b/src/main/resources/static/css/admin/shop/list.css
@@ -3,9 +3,8 @@
     display: flex;
     gap: 10px; /* 간격을 원하는 만큼 조정 가능 */
 }
-
 select[name="type"] {
-    width: 80px;
+    width: 75px;
     height: 40px;
     border: 1px solid #D8D8D8;
     text-align: center;
@@ -16,6 +15,39 @@ select[name="type"] {
     margin-top: 30px;
     margin-bottom: 10px;
 }
+/* 검색창 */
+input {
+    width: 200px;
+    height: 40px;
+    padding: 9px;
+    border: 1px solid #D8D8D8;
+    font-size: 13px;
+    background-color: #fefefe;
+    color: #333;
+    vertical-align: middle;
+    box-sizing: border-box;
+}
+/* 검색바 */
+.search_bar {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+/* 상점목록 */
+.operate {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: -20px !important;
+
+}
+
+/* 상점목록 운영*/
+.running {color: green;}
+.stopped {color: red;}
+.preparing {color: blue;}
+
 
 /*표*/
 .admingraph {
@@ -48,8 +80,16 @@ input[type="checkbox"] {
     margin-right: 6px;
 }
 
-
 /* 버튼 */
+
+/*검색*/
+.searchBtn {
+    width: 45px;
+    height: 40px;
+    background-color: #D8D8D8;
+    color: #FFFFFF;
+}
+
 /* [삭제] */
 .cs_delete-btn {
     cursor: pointer;
@@ -60,7 +100,7 @@ input[type="checkbox"] {
 .cs_modify-btn{
     cursor: pointer;
     text-decoration: none;
-    color: #2e8de5;
+    color: blue;
 }
 
 /* 삭제버튼 */
@@ -95,19 +135,6 @@ input[type="checkbox"] {
     box-sizing: border-box;
     cursor: pointer;
 }
-
-
-/* 리스트 표 */
-
-/* 자주묻는질문 */
-.admin_faq-list > td:nth-child(1) {width: 20px;}
-.admin_faq-list > td:nth-child(2) {width: 80px;}
-.admin_faq-list > td:nth-child(3) {width: 80px;}
-.admin_faq-list > td:nth-child(4) {width: 80px;}
-.admin_faq-list > td:nth-child(5) {width: auto; text-align: left;}
-.admin_faq-list > td:nth-child(6) {width: 80px;}
-.admin_faq-list > td:nth-child(7) {width: 80px;}
-.admin_faq-list > td:nth-child(8) {width: 80px;}
 
 
 /* 페이징 */
