--- a/src/main/resources/templates/admin/cs/notice/list.html
+++ b/src/main/resources/templates/admin/cs/notice/list.html
@@ -1,5 +1,5 @@
 <div class="content" th:fragment="list">
-    <link rel="stylesheet" th:href="@{/css/admin/list.css}" />
+    <link rel="stylesheet" th:href="@{/css/admin/cs/notice/list.css}" />
     <div class="dashboard">
         <div class="content_header">
             <h1>공지사항 목록</h1>
@@ -19,7 +19,7 @@
                 </select>
             </div>
             <table class="admingraph">
-                <tr class="admin_title" style="height: 50px;">
+                <tr class="admin_title">
                     <th><input type="checkbox" name="allCheck" /></th>
                     <th>번호</th>
                     <th>유형</th>
@@ -29,7 +29,7 @@
                     <th>관리</th>
                 </tr>
 
-                <tr class="admin_notice-list">
+                <tr class="admin_list">
                     <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
                     <td>100</td>
                     <td style="white-space: nowrap;">[유형선택]</td>
@@ -42,14 +42,14 @@
                     </td>
                     <td>120</td>
                     <td style="white-space: nowrap;">2024-10-14</td>
-                    <td>
-                        <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
+                    <td style="line-height: 20px">
+                        <a onclick="modifyProdStatus()" class="cs_delete-btn">[삭제]</a>
                         <br>
-                        <a href="">[수정]</a>
+                        <a href="" class="cs_modify-btn">[수정]</a>
                     </td>
                 </tr>
 
-                <tr class="admin_notice-list">
+                <tr class="admin_list">
                     <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
                     <td>100</td>
                     <td style="white-space: nowrap;">[유형선택]</td>
@@ -62,30 +62,10 @@
                     </td>
                     <td>120</td>
                     <td style="white-space: nowrap;">2024-10-14</td>
-                    <td>
-                        <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
+                    <td style="line-height: 20px">
+                        <a onclick="modifyProdStatus()" class="cs_delete-btn">[삭제]</a>
                         <br>
-                        <a href="">[수정]</a>
-                    </td>
-                </tr>
-
-                <tr class="admin_notice-list">
-                    <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
-                    <td>100</td>
-                    <td style="white-space: nowrap;">[유형선택]</td>
-                    <td style="text-align: left">
-                        <span>
-                            <a th:href="@{/admin/layout/cs/notice/view}">
-                                <span style="white-space: nowrap;">[안내] 제목</span>
-                            </a>
-                        </span>
-                    </td>
-                    <td>120</td>
-                    <td style="white-space: nowrap;">2024-10-14</td>
-                    <td>
-                        <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
-                        <br>
-                        <a href="">[수정]</a>
+                        <a href="" class="cs_modify-btn">[수정]</a>
                     </td>
                 </tr>
 
@@ -96,7 +76,7 @@
             <div class="pagingBox">
                 <div class="pagingList">
                     <!-- 이전 버튼 -->
-                    <a href="#" class="prev"></a>
+                    <a href="#" class="prev"><</a>
 
                     <!-- 페이지 링크 -->
                     <a href="#">1</a>
