--- a/src/main/resources/templates/admin/order/delivery.html
+++ b/src/main/resources/templates/admin/order/delivery.html
@@ -1,5 +1,5 @@
-<div class="content" th:fragment="delivery">
-    <link rel="stylesheet" th:href="@{/css/admin/list.css}" />
+<div class="content"  th:fragment="delivery">
+    <link rel="stylesheet" th:href="@{/css/admin/order/delivery.css}" />
     <div class="dashboard">
         <div class="content_header">
             <h1>배송현황</h1>
@@ -7,20 +7,20 @@
                 HOME > 주문관리 > <strong>배송현황</strong>
             </p>
         </div>
-
-        <section class="sectionBox">
-            <div>
-                <form action="/admin/order/delivery">
-                    <select name="type">
-                        <option value="orderNo">송장번호</option>
-                        <option value="orderId">주문번호</option>
-                        <option value="orderName">수령인</option>
-                    </select>
-                    <input class="searchInput" type="text" name="keyword">
-                    <input type="hidden" name="prodSeller" value="ADMIN" readonly>
-                    <input class="searchBtn" type="submit" value="검색">
-                </form>
-            </div>
+                    <!-- 컨텐츠 시작 -->
+                    <section class="sectionBox">
+                        <div>
+                            <form action="/admin/order/delivery" class="search_bar">
+                                <select name="type">
+                                    <option value="orderNo">송장번호</option>
+                                    <option value="orderId">주문번호</option>
+                                    <option value="orderName">수령인</option>
+                                </select>
+                                <input class="searchInput" type="text" name="keyword">
+                                <input type="hidden" name="prodSeller" value="ADMIN" readonly>
+                                <input class="searchBtn" type="submit" value="검색">
+                            </form>
+                        </div>
 
 
             <table class="admingraph">
@@ -56,10 +56,10 @@
 
             </table>
 
-            <div class="pagingBox">
-                <div class="pagingList">
-                    <!-- 이전 버튼 -->
-                    <a href="#" class="prev"></a>
+                        <div class="pagingBox">
+                            <div class="pagingList">
+                                <!-- 이전 버튼 -->
+                                <a href="#" class="prev"><</a>
 
                     <!-- 페이지 링크 -->
                     <a href="#">1</a>
